# blippy

./: .gitignore  AUTH.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  FEATURES.md  KEYBINDS.md  LICENSE  README.md  dist-workspace.toml  keybinds.example.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: app.rs  auth.rs  cli.rs  config.rs  discovery.rs  git.rs  github.rs  keybinds.rs  main.rs  main_action_utils.rs  main_actions.rs  main_data.rs  main_events.rs  main_linked_actions.rs  main_sync.rs  markdown.rs  pr_diff.rs  repo_index.rs  store.rs  sync.rs  theme.rs  ui.rs
src/app/: accessors.rs  editor.rs  input.rs  linked.rs  metadata.rs  navigation.rs  navigation_keyboard.rs  navigation_mouse.rs  preset.rs  pull_request.rs  search.rs  state.rs  tests.rs
src/app/tests/: part1.rs  part2.rs  part3.rs  part4.rs
src/github/: comments.rs  issues.rs  mod.rs  pull_requests.rs  repos.rs  types.rs
src/main/: tests.rs
src/main_action_utils/: checkout.rs  issue_actions.rs  issue_selection.rs  mod.rs  pr_review_actions.rs  preset.rs
src/main_sync/: issue_actions.rs  mod.rs  poll.rs  pr_sync.rs  repo_sync.rs  review_actions.rs
src/store/: tests.rs
src/sync/: tests.rs
src/ui/: ui_editor_views.rs  ui_issue_detail.rs  ui_issues.rs  ui_linked_picker.rs  ui_metadata.rs  ui_pull_request.rs  ui_repo.rs  ui_shared.rs  ui_status_overlay.rs
