[package]
name = "blippy"
version = "0.1.0"
edition = "2024"
description = "Maintainer-first TUI for triaging GitHub issues and pull requests"
homepage = "https://github.com/AksharP5/blippy"
repository = "https://github.com/AksharP5/blippy"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
keyring = "2.3"
rpassword = "7.3"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
async-trait = "0.1"
pulldown-cmark = "0.12"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
